--- a/portfolio.css
+++ b/portfolio.css
@@ -12,9 +12,8 @@
 .title-header {
     background:rgb(253, 190, 107);
     text-align: center;
-    height:100px;
+    padding:5px;
     font-family: 'Fleur De Leah', cursive;
-    font-size: 60px;
     text-transform: capitalize;
     border-top:6px solid rgb(253, 90, 117);
     border-bottom:6px solid rgb(253, 90, 117);
@@ -42,7 +41,7 @@
 .about-header-title {
     font-family:'Fleur De Leah', cursive;
     text-align: center;
-    font-size: 65px;
+    font-size: 55px;
     background:rgb(253, 190, 107);
 }
 
@@ -77,28 +76,30 @@
 .top-header-nav {
     background: rgb(252, 208, 155);
     border-bottom:6px solid rgb(253, 90, 117);
-    height:400px;
+    padding:3px;
 }
 
 .about-text{
     margin-left: 15%;
-    font-family:'Fleur De Leah', cursive;
-    font-size:30px;
+    font-family: 'Playball', cursive;
+    font-size:25px;
 }
 
 .main-header {
     /*border:3px solid purple;*/
-    background: rgb(252, 208, 155);
+    background:rgb(253, 190, 107);
     font-family: 'Fleur De Leah', cursive;
     text-transform: capitalize;
     text-align: center;
-    font-size:43px;
     border-bottom:6px solid rgb(253, 90, 117);
+    border-right:6px solid rgb(253, 90, 117);
+    border-left:6px solid rgb(253, 90, 117);
+    padding:4px;
 }
 
 .project-header {
     background:rgb(253, 190, 107);
-    height:210px;
+    padding:5px;
     border-top:6px solid rgb(253, 90, 117);
     border-bottom:6px solid rgb(253, 90, 117);
     border-right:6px solid rgb(253, 90, 117);
@@ -108,7 +109,7 @@
 .project-title {
     font-family: 'Fleur De Leah', cursive;
     text-transform: capitalize;
-    font-size:65px;
+    font-size:55px;
     text-align: center;
 }
 
@@ -117,9 +118,12 @@
     text-transform: capitalize;
     text-align: center;
     border-bottom:6px solid rgb(253, 90, 117);
-    background: rgb(252, 208, 155);
-    height:100px;
-    font-size:55px;
+    border-left:6px solid rgb(253, 90, 117);
+    border-right:6px solid rgb(253, 90, 117); 
+    background:rgb(253, 190, 107);
+    /*height:100px;*/
+    padding:1px;
+    font-size:50px;
 }
 
 .main-page-link {
@@ -145,7 +149,7 @@
 .section2 {
     border-top:6px solid rgb(253, 90, 117);
     background:rgb(252, 208, 155);
-    height:400px;
+    padding:2px;
 
 }
 
@@ -157,9 +161,9 @@
 
 .project-text {
     /*border: 3px solid yellowgreen;*/
-    font-family: 'Fleur De Leah', cursive;
+    font-family:'Playball', cursive;
     text-transform: capitalize;
-    font-size: 33px;
+    font-size: 29px;
     text-align: center;
 }
 
@@ -168,7 +172,7 @@
     border-bottom:6px solid rgb(253, 90, 117);
     border-left:6px solid rgb(253, 90, 117);
     border-right:6px solid rgb(253, 90, 117);
-    height: 100px;
+    padding:5px;
     text-align: center;
     font-family:'Fleur De Leah', cursive;
     font-size: 60px;
@@ -176,8 +180,8 @@
 
 .about-section2 {
     background: rgb(252, 208, 155);
-    border-bottom:6px solid rgb(253, 90, 117);
-    height:200px;
+    /*height:250px;*/
+    padding:1px;
     font-family:'Playball', cursive;
     font-size: 25px;
 }
@@ -189,8 +193,7 @@
 .project-section {
     text-align: center;
     background: rgb(252, 208, 155);
-    height:950px;
-    border-bottom:7px solid rgb(253, 90, 117);
+    padding:1px;
 }
 
 .project-button {
@@ -215,26 +218,19 @@
     border-left:6px solid rgb(253, 90, 117);
     border-right:6px solid rgb(253, 90, 117);
     background: rgb(253, 190, 107);
-    height:100px;
-}
-
-.contact-header {
-    font-size:50px;
+    padding:1px;
 }
 
 .footer-section2 {
     /*border:3px solid green;*/
     font-family: 'Playball', cursive;
     font-size:24px;
-    height: 100px;
+    height: 200px;
     background: rgb(252, 208, 155);
-    border-bottom:6px solid rgb(253, 90, 117);
 }
 
-.footer-item-list {
-    display:flex;
-    justify-content: center;
-    text-align: center;
+.footer-list {
     list-style: none;
+    text-align: center;
 }
 /*end footer*/
